package com.example.myrecipe.Listeners;

public interface RecipeClickListener {
    void onRecipeClicked(String id);
}

