package com.example.myrecipe.Models;

import java.util.ArrayList;

public class AnalyzedInstruction {
        public String name;
        public ArrayList<Step> steps;
}
