package com.example.myrecipe.Models;

public class Equipment {
    public int id;
    public String name;
    public String localizedName;
    public String image;
}
