package com.example.myrecipe.Models;

public class Ingredient {
    public int id;
    public String name;
    public String localizedName;
    public String image;
}
