package com.example.myrecipe.Models;

public class Length {
    public int number;
    public String unit;
}
