package com.example.myrecipe.Models;

public class Measures {
    public Us us;
    public Metric metric;
}
