package com.example.myrecipe.Models;

public class Metric {
    public double amount;
    public String unitShort;
    public String unitLong;
}
