package com.example.myrecipe.Models;

public class ProductMatch {
    public int id;
    public String title;
    public String description;
    public String price;
    public String imageUrl;
    public double averageRating;
    public double ratingCount;
    public double score;
    public String link;
}
